# songart

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
config/: songart.toml
src/: audio.rs  config.rs  display.rs  fft.rs  logging.rs  main.rs  recognition.rs  state.rs  visualizer_loop.rs
src/visualizer/: analog_vu.rs  common.rs  mod.rs  oscilloscope.rs  spectrum.rs
