[package]
name = "songart"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sdl2 = { version = "0.38", features = ["image", "ttf"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ctrlc = "3.4"
toml = "0.8"